--- a/css/styles.css
+++ b/css/styles.css
@@ -18,7 +18,7 @@ body {
     font-family: 'Arial', sans-serif;
     margin: 0;
     padding: 0;
-    background-image: url('imagenes/biblio.jpg'); /* Ruta a tu imagen de fondo */
+    background-image: url('../imagenes/biblio.jpg'); /* Ruta a tu imagen de fondo */
     background-size: cover; /* Ajusta el tamaño de la imagen para cubrir toda la pantalla */
     background-position: center; /* Centra la imagen en la pantalla */
     color: #333;
@@ -28,7 +28,7 @@ body {
 
 /* Resto de tus estilos ... */
 
-header, nav, section, footer {
+header, section, footer {
     
 
     margin: 20px auto;
@@ -41,6 +41,8 @@ header, nav, section, footer {
     
 
 }
+
+
 
 
 
