--- a/css/styles.css
+++ b/css/styles.css
@@ -105,11 +105,7 @@ header, section, footer {
 
 }
 
-.navcat{
-    color: #ddd;
-    background-color: #ddd;
 
-}
 
     
 /*fin catalogo grid*/
@@ -219,6 +215,9 @@ header, section, footer {
     margin-top: 10px;
 }
 
+
+/*fin libros destacados*/
+
 /* Ajustes adicionales para el botón "Volver al Menú Principal" */
 button {
     display: block;
@@ -236,12 +235,126 @@ button:hover {
     background-color: #002d4d;
 }
 
-/*fin libros destacados*/
+
+
+
+
+
+
 
 
 /*inicio contacto*/
 
+*{
+    margin: 0;
+    padding: 0;
+    font-family: 'Montserrat', sans-serif;
+    box-sizing: border-box;
+    transition: 0.5s;
+}
 
+body{
+    height: 100vh;
+    width: 100%;
+}
+
+.contact{
+    height: 100%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #004080;
+}
+
+.contact__image-wrapper{
+    height: 100%;
+    width: 50%;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.contact__image{
+    width: 100%;
+}
+
+.contact__right-side{
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    flex-direction: column;
+    padding:0 7.3% 0 4.7%;
+    width: 50%;
+}
+
+.contact__title{
+    font-size: 100px;
+    font-family: 'Bellefair', serif;
+    font-weight: 400;
+    margin-bottom: 70px;
+    text-transform: uppercase;
+}
+
+.contact__form-wrapper, .contact__input-line{
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    flex-direction: column;
+    width: 100%;
+}
+
+.contact__input-line{
+    margin-bottom: 45px;
+}
+
+.contact__label{
+    font-size: 18px;
+    font-weight: 600;
+}
+
+.contact__input{
+    height: 30px;
+    outline: none;
+    padding: 5px 0;
+    border-bottom: 2px solid #121212;
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    width: 100%;
+    color: #121212;
+    background-color: transparent;
+}
+
+.contact__input--textarea{
+    height: 100px;
+    outline: none;
+    padding: 5px 0;
+    border-bottom: 2px solid #121212;
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    width: 100%;
+    color: #121212;
+    resize: none;
+    background-color: transparent;
+}
+
+.contact__submit-button{
+    padding: 18px 55px;
+    background-color: #121212;
+    border-radius: 50px;
+    color: #f2f2f2;
+    font-weight: 600;
+    border: none;
+    font-size: 18px;
+    cursor: pointer;
+}
+
+.contact__submit-button:hover{
+    background-color: #2e2e2e;
+}
 
 /*fin contacto*/
 
@@ -254,8 +367,8 @@ button:hover {
     font-family: 'Arial', sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f7f7f7;
-    color: #333;
+    background-color: #004080;
+    color: white;
 }
 
 header {
@@ -277,14 +390,14 @@ header {
 
 
 .descripcion h2 {
-    color: #004080;
+    color: white;
     font-size: 28px;
     margin-bottom: 10px;
 }
 
 .descripcion span {
     font-weight: bold;
-    color: #002d4d;
+    color: white;
 }
 
 .descripcion p {
@@ -298,7 +411,7 @@ header {
 }
 
 .destacado h3, .explora h3 {
-    color: #004080;
+    color: white;
     font-size: 24px;
     margin-bottom: 10px;
 }
@@ -308,12 +421,16 @@ header {
     line-height: 1.6;
     color: white;
 }
+.bodyindex{
+    background-color: #004080;
+
+}
 
 /* fin css style informacion pag. principal index*/
 
 h1, h2 {
 
-    color: #004080;
+    color: white;
 
     text-align: center;
 
