separarheader+ajustelibrosdestadacos+novedades

--- a/css/styles.css
+++ b/css/styles.css
@@ -415,8 +415,12 @@ header {
     text-align: center;
 }
 
-.container {
+#libros-destacados, #novedades{
     max-width: 800px;
+
+}
+
+.container {
     margin: 20px auto;
     padding: 20px;
     background-color: rgba(0, 0, 0, 0.492);
