--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2,6 +2,7 @@
 @import "./contacto";
 @import "./libros_descatados";
 @import "./novedades";
-@import "../scss/base/maps"
+@import "../scss/base/maps";
+@import "../scss/newstyle.scss";
 
 
