se modfica novedades y se ajusta estilo

--- a/css/style.css
+++ b/css/style.css
@@ -210,6 +210,10 @@ body {
   transition: 0, 2s;
 }
 
+h3 {
+  text-align: center;
+}
+
 /* Resto de tus estilos ... */
 header, section, footer {
   margin: 20px auto;
