--- a/scss/_novedades.scss
+++ b/scss/_novedades.scss
@@ -47,6 +47,7 @@ h3{
 .imgder:hover{
     transform: scale(1.2); /* Aumenta el tamaño de la imagen en hover */
     border: solid blue;
+    background-color: beige;
     
        
 }
@@ -68,6 +69,7 @@ h3{
 .imgizq:hover{
     transform: scale(1.2); /* Aumenta el tamaño de la imagen en hover */
     border: solid blue;
+    background-color: beige;
     
        
 }
