--- a/scss/_catalogo.scss
+++ b/scss/_catalogo.scss
@@ -90,13 +90,24 @@ body{
 
 }
 
-/*Estilos Parrafo*/
+/*hover banner*/
+.banner3:hover{
+    transform: scale(1.1);
+    transition: 0.2s;
+
+}
+
+.banner4:hover{
+    transform: scale(1.1);
+    transition: 0.2s;
+
+}
 
 
 
 
 
 
-/*Estilos Parrafo*/
+/*Hover banner*/
 
 
