--- a/scss/_libros_descatados.scss
+++ b/scss/_libros_descatados.scss
@@ -3,6 +3,20 @@
 
 }
 
+/*hover imagenes*/
+.libro-destacado:hover{
+    background-color: beige;
+   transform: scale(1.1);
+
+    
+    
+
+}
+
+
+
+/*hover imagenes*/
+
 /*Categoría / lista*/
 .boxlist{
     margin-bottom: 20px;
