--- a/scss/_libros_descatados.scss
+++ b/scss/_libros_descatados.scss
@@ -5,8 +5,9 @@
 
 /*hover imagenes*/
 .libro-destacado:hover{
-    background-color: beige;
-   transform: scale(1.1);
+    color: black;
+    background-color: blanchedalmond;
+    transform: scale(1.1);
 
     
     
